# fantasanremo-team-build-app

./: .dockerignore  .env.example  .gitignore  .note  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  run_notebooks.py
backend/: .gitignore  database.py  main.py  models.py  populate_db.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  schemas.py
backend/data_pipeline/: __init__.py  config.py  pipeline.py
backend/data_pipeline/schemas/: artist_schema.json  biographical_schema.json  characteristics_schema.json  historical_schema.json  historical_unified_schema.json
backend/data_pipeline/sources/: __init__.py  base.py  wikipedia_source.py
backend/data_pipeline/storage/: __init__.py  database_store.py
backend/data_pipeline/validators/: __init__.py  business_rules.py  data_quality.py  schema_validator.py
backend/ml/: ab_testing.py  benchmark.py  biographical_features.py  caratteristiche_features.py  categorization.py  data_preparation.py  feature_builder.py  features.py  features_enhanced.py  genre_features.py  interaction_features.py  model_comparison.py  normalization_usage_example.py  predict.py  quality_checks.py  regulatory_features.py  score_categories.py  stacking_ensemble.py  train.py  uncertainty.py
backend/ml/diagnostics/: check_data_leakage_fix.py  check_full_pipeline.py  check_unified_format.py  report_unified_format.py
backend/ml/models/: autogluon_benchmark_v1.json  benchmark_baseline.json  benchmark_baseline_run.json  benchmark_baseline_v2_refresh.json  benchmark_candidate_run.json  benchmark_candidate_run_v2.json  benchmark_candidate_run_v3.json  benchmark_candidate_run_v4.json  benchmark_candidate_run_v5.json  benchmark_candidate_run_v6_hybrid.json  benchmark_latest.json  benchmark_post_data_sync.json  benchmark_pre_data_review.json  ensemble_meta.json  predictions_2026.json
backend/routers/: artisti.py  predizioni.py  storico.py  team.py
backend/tests/: __init__.py  conftest.py  requirements-test.txt  test_api.py  test_ml.py  test_ml_benchmark.py  test_ml_quality_checks.py  test_models.py  test_unified_storico.py
backend/utils/: enriched_artists.py  name_normalization.py
(+117 files in other folders)
