[project]
name = "fantasanremo-workspace"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ruff>=0.9.0",
    "numpy",
    "pandas",
    "scikit-learn",
    "scipy",
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "python-dotenv",
    "sqlalchemy",
    "pyyaml",
    "joblib",
    "python-multipart",
    "xgboost>=3.1.3",
    "lightgbm>=4.6.0",
    "ipykernel>=6.29.0",
    "matplotlib",
    "seaborn",
    "jsonschema",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.uv.sources]
fantasanremo-workspace = { path = ".", editable = true }

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# Ignore E402 (module level import not at top) - project adds sys.path before imports by design
# Ignore E741 (ambiguous variable name) - single letter vars are acceptable in ML context
# Ignore N803/N806 (naming conventions) - X_train, X_val, etc. are standard ML naming
ignore = ["E402", "E741", "N803", "N806"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]
