[project]
name = "fantasanremo-backend"
version = "1.0.0"
description = "FantaSanremo Team Builder 2026 - Backend API with ML predictions"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.36",
    "pydantic==2.10.4",
    "python-multipart==0.0.20",
    "pandas==2.2.3",
    "numpy==2.2.1",
    "scikit-learn==1.6.1",
    "joblib==1.4.2",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.21.1",
    "pytest-mock==3.12.0",
    "pytest-xdist==3.5.0",
    "httpx==0.28.1",
    "ruff>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.1",
    "ruff>=0.14.14",
]
